@@ -1,5 +1,12 @@
 2004-04-19  Mark McLoughlin  <mark@skynet.ie>
 
+	Patch Elijah Newren <bugsqueesher@yahoo.com> in bug #138009
+
+	* examples/basic-gconf-app.c: (config_entry_commit):
+	return a boolean so we don't crash.
+
+2004-04-19  Mark McLoughlin  <mark@skynet.ie>
+
 	Based on a patch from Ryan Lovett <ryan@ocf.berkeley.edu>
 	in bug #95198.
 
